# cmd/api/api.go
@@ -89,7 +89,7 @@ func (app *application) mount() http.Handler {
 				r.With(app.BasicAuthMiddleware()).Post("/deploy", app.deployOnlyCamundaHandler)
 				r.With(app.BasicAuthMiddleware()).Post("/crud", app.crudCamundaHandler)
 				r.With(app.BasicAuthMiddleware()).Post("/deploy-crud", app.deployCamundaHandler)
-				r.Post("/{resourceKey}/delete", func(w http.ResponseWriter, r *http.Request) {})
+				r.With(app.BasicAuthMiddleware()).Post("/{resourceKey}/delete", func(w http.ResponseWriter, r *http.Request) {})
 			})
 			r.Route("/job", func(r chi.Router) {
 				r.Post("/activate", func(w http.ResponseWriter, r *http.Request) {})
@@ -130,8 +130,26 @@ func (app *application) mount() http.Handler {
 
 		r.Route("/bpmn", func(r chi.Router) {
 			r.Use(app.AuthTokenMiddleware)
-			r.Route("/kantor_ngetes_id", func(r chi.Router) {
-				r.Post("/", app.createKantorNgetesIdHandler)
+			// r.Route("/kantor_ngetes_id", func(r chi.Router) {
+			// 	r.Post("/", app.createKantorNgetesIdHandler)
+			// 	r.Route("/{id}", func(r chi.Router) {
+			// 		r.Delete("/", app.cancelKantorNgetesIdHandler)
+			// 	})
+			// })
+			// r.Route("/pesen_ke_restorant", func(r chi.Router) {
+			// 	r.Post("/", app.createPesenKeRestorantHandler)
+			// 	r.Route("/{id}", func(r chi.Router) {
+			// 		r.Delete("/", app.cancelPesenKeRestorantHandler)
+			// 	})
+			// })
+			r.Route("/Process_1hti3q2", func(r chi.Router) {
+				r.Post("/", app.createProcess1hti3q2Handler)
+				// get tasklist
+
+				r.Route("/{id}", func(r chi.Router) {
+					r.Get("/", app.getByIdProcess1hti3q2Handler)
+					r.Delete("/", app.cancelProcess1hti3q2Handler)
+				})
 			})
 		})
 	})
